# nanopb

./: CMakeLists.txt  pb_decode.c
cmake/: nanopb_generate.cmake
examples/cmake_simple_new/: CMakeLists.txt
generator/: nanopb_generator.py
